# server_generate/api/openapi.yaml
@@ -90,16 +90,18 @@ components:
           type: array
         contact_phone:
           example:
-          - "0500000"
-          - "0540000000"
+          - dialing_code: "972"
+            number: "123456789"
+          - dialing_code: "972"
+            number: "123456789"
           items:
-            type: string
+            $ref: '#/components/schemas/onboarding_create_contact_phone'
           type: array
         company_name:
           example: company
           type: string
       required:
-      - company
+      - company_name
       - email
       - name
       - phone
@@ -156,11 +158,20 @@ components:
           type: array
         contact_phone:
           example:
-          - "0500000000"
-          - "0500000001"
+          - dialing_code: "972"
+            number: "123456789"
+          - dialing_code: "972"
+            number: "123456789"
           items:
-            type: string
+            $ref: '#/components/schemas/onboarding_create_contact_phone'
           type: array
+      type: object
+    onboarding_create_contact_phone:
+      properties:
+        dialing_code:
+          type: string
+        number:
+          type: string
       type: object
     onboarding_update_address:
       example:
@@ -174,12 +185,16 @@ components:
       type: object
     onboarding_update_company_asset:
       example:
-        asset_id: 4b39a1c4-60a3-11ec-a1a2-d08e7912923c
+        asset_id:
+        - 4b39a1c4-60a3-11ec-a1a2-d08e7912923c
+        - 4b39a1c4-60a3-11ec-a1a2-d08e7912923c
         is_add: true
       properties:
-        asset:
-          format: uuid
-          type: string
+        asset_ids:
+          items:
+            format: uuid
+            type: string
+          type: array
         is_add:
           type: boolean
       type: object
